--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,15 @@
     "angular-route": "~1.5.0",
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
-    "html5-boilerplate": "^5.3.0"
+    "html5-boilerplate": "^5.3.0",
+    "angular-sanitize": "1.5.11",
+    "angular-animate": "1.5.11",
+    "angular-aria": "1.5.11",
+    "angular-messages": "1.5.11",
+    "angular-material": "^1.1.3",
+    "lodash": "^4.17.4"
+  },
+  "resolutions": {
+    "angular": "~1.5.0"
   }
 }
