--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-aria": "1.5.11",
     "angular-messages": "1.5.11",
     "angular-material": "^1.1.3",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "angular-material-data-table": "^0.10.10"
   },
   "resolutions": {
     "angular": "~1.5.0"
