--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-messages": "1.5.11",
     "angular-material": "^1.1.3",
     "lodash": "^4.17.4",
-    "angular-material-data-table": "^0.10.10"
+    "angular-material-data-table": "^0.10.10",
+    "angular-local-storage": "^0.5.2"
   },
   "resolutions": {
     "angular": "~1.5.0"
