--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "angular-sanitize": "1.5.11",
     "angular-animate": "1.5.11",
     "angular-aria": "1.5.11",
-    "angular-messages": "1.5.11",
+    "angular-messages": "^1.6.4",
     "angular-material": "^1.1.3",
     "lodash": "^4.17.4",
     "angular-material-data-table": "^0.10.10",
